--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^4.2.0",
     "firebase": "^6.2.2",
     "firebase-tools": "^7.0.1",
-    "lodash": "^4.17.15",
+    "jzz": "^0.9.7",
     "react": "^16.8.6",
     "react-ace": "^7.0.2",
     "react-dom": "^16.8.6",
