--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
+    "ace-builds": "^1.4.10",
     "firebase": "^6.2.2",
     "firebase-tools": "^7.0.1",
     "jazz-midi": "^1.7.1",
     "jzz": "^0.9.7",
     "react": "^16.8.6",
-    "react-ace": "^7.0.2",
+    "react-ace": "^8.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
